# rupis

./: .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  rupis.gemspec  ruuse.gemspec
.github/workflows/: main.yml
exe/: rupis  ruuse
ext/rupis/: Cargo.toml  extconf.rb
ext/rupis/src/: entry.rs  error.rs  lib.rs
ext/rupis/src/internal/: ast.rs  mod.rs  server.rs
ext/ruuse/: Cargo.toml  extconf.rb
ext/ruuse/src/: entry.rs  lib.rs
ext/ruuse/src/internal/: ast.rs
lib/: rupis.rb  ruuse.rb
lib/rupis/: server.rb  version.rb
lib/ruuse/: server.rb  version.rb
sig/: rupis.rbs  ruuse.rbs
spec/: initialize_spec.rb  rupis_spec.rb  ruuse_spec.rb  spec_helper.rb  syntax_spec.rb
