[package]
name = "ruuse"
version = "0.1.0"
edition = "2021"
authors = ["sevenc-nanashi <sevenc7c@sevenc7c.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.4" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-lsp = "0.19.0"
